sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: illegal start of statement
    else if (plusPetit(i,i+1)==true){
    ^